--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "sass:math";
 
 /**
@@ -108,7 +109,7 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: darken($brand-color, 15%);
+        color: color.adjust($brand-color, $lightness: -15%, $space: hsl);
     }
 
     &:hover {
